--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ img{display:block; height:auto;}
         #main-header .mobile-header .header-content > nav ul :is(.wishlist-wrapper, .cart-wrapper) .counter:hover{color:var(--wp--preset--color--title);}
         #main-header .mobile-header .header-content > nav ul :is(.wishlist-wrapper, .cart-wrapper) .counter :is(.parentesis, .number){font-size:14px;}
         /* páneles */
-        #panel-overlay{position:fixed; width:100%; height:100%; top:0; right:-100%; background-color:transparent; transition:background-color .3s ease; transition-delay:.3s;}
+        #panel-overlay{position:fixed; width:100%; height:100%; top:0; right:-100%; background-color:transparent; transition:background-color .3s ease; transition-delay:.3s; z-index:101;}
         #panel-overlay.open{right:0; background-color:#ffffffb9;}
         /* menú principal */
         #main-header .mobile-header .header-content .primary{display:none;}
