botón para el panel de carrito

--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ img{display:block; height:auto;}
         /* páneles */
         #panel-overlay{position:fixed; width:100%; height:100%; top:0; right:-100%; background-color:transparent; transition:background-color .3s ease; transition-delay:.3s; z-index:101;}
         #panel-overlay.open{right:0; background-color:#ffffffb9;}
+        #cart-panel--wrapper.open{right:0;}
         /* menú principal */
         #main-header .mobile-header .header-content .primary{display:none;}
 
