--- a/style.css
+++ b/style.css
@@ -90,9 +90,9 @@ img{display:block; height:auto;}
         #main-header .mobile-header .header-content > nav ul :is(.wishlist-wrapper, .cart-wrapper) .counter:hover{color:var(--wp--preset--color--title);}
         #main-header .mobile-header .header-content > nav ul :is(.wishlist-wrapper, .cart-wrapper) .counter :is(.parentesis, .number){font-size:14px;}
         /* páneles */
-        #panel-overlay{position:fixed; width:100%; height:100%; top:0; right:-100%; background-color:transparent; transition:background-color .3s ease; transition-delay:.3s; z-index:101;}
+        #panel-overlay{position:fixed; width:100%; height:100%; top:0; right:-100%; background-color:transparent; transition:background-color .3s ease; z-index:101;}
         #panel-overlay.open{right:0; background-color:#ffffffb9;}
-        #panel-overlay.open.close{right:-100%; background-color:transparent; transition-delay:0;}
+        #panel-overlay.open.close{right:-100%; background-color:transparent;}
         #cart-panel--wrapper.open{right:0;}
         #cart-panel--wrapper.open.close{right:-100%;}
         /* menú principal */
