--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ img{display:block; height:auto;}
 /* panel carrito */
 #cart-panel--wrapper{position:fixed; top:0; width:100%; height:100%; transition:all .3s ease; right:-100%; z-index:102;}
 #cart-panel{background-color:#333; color:#fff; position:absolute; top:0; right:0; width:var(--width--cart-panel); height:100%; overflow:hidden; padding:var(--padding-cart-panel); transition:all .3s ease;}
-#close-cart-panel{padding-bottom:var(--padding-close--cart-panel); color:#fff; display:flex; flex-direction:row-reverse; border-bottom:1px solid #464646; border-radius:0; border:0 solid transparent; background-color:transparent;}
+#close-cart-panel{color:#fff;border-bottom:1px solid #464646; border:0 solid transparent; background-color:transparent; font-size:16px;}
 #cart-panel .woocommerce{display:grid; grid-template-rows:auto 1fr auto; height:calc(100% - var(--spacing-cart));}
 #cart-panel .woocommerce .woocommerce-cart-form .shop_table_responsive{width:100%; border-collapse:separate; text-align:left;}
 #cart-panel .woocommerce .woocommerce-cart-form .shop_table_responsive thead{display:none;}
