--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ img{display:block; height:auto;}
             #main-footer .social ul li a[href*="instagram"]:before{content:'\f16f';}
 
 /* panel carrito */
-#cart-panel--wrapper{position:fixed; top:0; width:100%; height:100%; transition:all .3s ease; right:-100%; z-index:102;}
+#cart-panel--wrapper{position:fixed; top:0; width:var(--width--cart-panel); height:100%; transition:all .3s ease; right:-100%; z-index:102;}
 #cart-panel{background-color:#333; color:#fff; position:absolute; top:0; right:0; width:var(--width--cart-panel); height:100%; overflow:hidden; padding:var(--padding-cart-panel); transition:all .3s ease;}
 #close-cart-panel{color:#fff;border-bottom:1px solid #464646; border:0 solid transparent; background-color:transparent; font-size:16px; display:block; margin-left:auto; cursor:pointer;}
 #cart-panel .woocommerce{display:grid; grid-template-rows:auto 1fr auto; height:calc(100% - var(--spacing-cart));}
