--- a/style.css
+++ b/style.css
@@ -121,39 +121,5 @@ img{display:block; height:auto;}
             #main-footer .social ul li a[href*="instagram"]:before{content:'\f16f';}
 
 /* panel carrito */
-#cart-panel--wrapper{position:fixed; top:0; width:var(--width--cart-panel); height:100%; transition:all .3s ease; right:-100%; z-index:102;}
-#cart-panel{background-color:#333; color:#fff; position:absolute; top:0; right:0; width:var(--width--cart-panel); height:100%; overflow:hidden; padding:var(--padding-cart-panel); transition:all .3s ease;}
+#cart-panel{background-color:#333; color:#fff; position:fixed; top:0; right:-100%; width:var(--width--cart-panel); height:100%; overflow:hidden; padding:var(--padding-cart-panel); transition:all .3s ease; z-index:102;}
 #close-cart-panel{color:#fff;border-bottom:1px solid #464646; border:0 solid transparent; background-color:transparent; font-size:16px; display:block; margin-left:auto; cursor:pointer;}
-#cart-panel .woocommerce{display:grid; grid-template-rows:auto 1fr auto; height:calc(100% - var(--spacing-cart));}
-#cart-panel .woocommerce .woocommerce-cart-form .shop_table_responsive{width:100%; border-collapse:separate; text-align:left;}
-#cart-panel .woocommerce .woocommerce-cart-form .shop_table_responsive thead{display:none;}
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item{position:relative; display:grid; grid-template-columns:auto 1fr auto; gap:0 20px; padding:15px 0;}
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-remove{position:absolute; top:15px; right:0; display:grid; height:18px; place-content:center;}
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-remove a{color:#fff;}
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-thumbnail{grid-column:1/2; grid-row:1/3;}
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-thumbnail a img{width:60px;}
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-name{grid-column:2/3; grid-row:1/2;}
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-name a{color:#fff;}
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-price{display:none;}
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity{grid-column:2/3; grid-row:2/3;}
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity label{display:none;}
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity input[type=number]::-webkit-inner-spin-button, 
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity input[type=number]::-webkit-outer-spin-button{-webkit-appearance:none;}
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity input[type=number]{-moz-appearance:textfield;}
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity input[type=number]{background-color:#333; border:none; width:20px; color:#fff; text-align:right; margin:0 10px;}
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity input[type=number]:focus{outline:none;}
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity button{background-color:#333; border:none; color:#fff; border-radius:0;}
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-quantity .quantity button:focus{outline:none;}
-#cart-panel .woocommerce .woocommerce-cart-form .woocommerce-cart-form__cart-item.cart_item .product-subtotal{grid-column:3/4; grid-row:2/3;}
-#cart-panel .woocommerce .woocommerce-cart-form tbody tr:last-child .actions .coupon{display:none;}
-#cart-panel .woocommerce .woocommerce-cart-form tbody tr:last-child .actions button{display:grid; width:100%; height:44px; place-content:center; background-color:#111; border:1px solid #111; font-size:16px; color:#fff; margin-top:24px;}
-#cart-panel .woocommerce .cart-collaterals .cart_totals h2{display:none;}
-#cart-panel .woocommerce .cart-collaterals .cart_totals .shop_table_responsive{width:100%;}
-#cart-panel .woocommerce .cart-collaterals .cart_totals .shop_table_responsive tbody .cart-subtotal{display:flex; align-items:center; justify-content:space-between; height:60px; border-top:1px solid #464646; border-bottom:1px solid #464646;}
-#cart-panel .woocommerce .cart-collaterals .cart_totals .shop_table_responsive tbody .cart-subtotal th{font-weight:400;}
-#cart-panel .woocommerce .cart-collaterals .cart_totals .shop_table_responsive tbody .order-total{display:none;}
-#cart-panel .woocommerce .cart-collaterals .cart_totals .wc-proceed-to-checkout .checkout-button{display:grid; width:100%; height:44px; place-content:center; background-color:#111; color:#fff; margin-top:13px;}
-#cart-panel .woocommerce .return-to-shop .button.wc-backward{border:1px solid #5f5f5f; color:#fff; display:grid; place-content:center; width:100%; height:42px; border-radius:0; transition:all .3s ease;}
-#cart-panel .woocommerce .wc-block-components-notice-banner.is-info{background-color:transparent; display:grid; justify-content:center; color:#fff; border-color:transparent; margin-top:55px;}
-#cart-panel .woocommerce .wc-block-components-notice-banner.is-info i{font-size:20px; line-height:29px; width:50px; height:50px; margin:0 auto 11px; padding:10px; text-align:center; background:#414141; border-radius:50px;}
-#cart-panel .woocommerce .return-to-shop .button.wc-backward:hover{border:1px solid #777;}
