--- a/style.css
+++ b/style.css
@@ -93,8 +93,8 @@ img{display:block; height:auto;}
         #panel-overlay{position:fixed; width:100%; height:100%; top:0; right:-100%; background-color:transparent; transition:background-color .3s ease; z-index:101;}
         #panel-overlay.open{right:0; background-color:#ffffffb9;}
         #panel-overlay.open.close{right:-100%; background-color:transparent;}
-        #cart-panel--wrapper.open{right:0;}
-        #cart-panel--wrapper.open.close{right:-100%;}
+        #cart-panel.open{right:0;}
+        #cart-panel.open.close{right:-100%;}
         /* menú principal */
         #main-header .mobile-header .header-content .primary{display:none;}
 
