--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ img{display:block; height:auto;}
         #panel-overlay{position:fixed; width:100%; height:100%; top:0; right:-100%; background-color:transparent; transition:background-color .3s ease; z-index:101;}
         #panel-overlay.open{right:0; background-color:#ffffffb9;}
         #cart-panel.open{right:0;}
+        #wishlist-panel.open{right:0;}
         /* menú principal */
         #main-header .mobile-header .header-content .primary{display:none;}
 
@@ -119,5 +120,6 @@ img{display:block; height:auto;}
             #main-footer .social ul li a[href*="instagram"]:before{content:'\f16f';}
 
 /* panel carrito */
-#cart-panel{background-color:#333; color:#fff; position:fixed; top:0; right:-100%; width:var(--width--cart-panel); height:100%; overflow:hidden; padding:var(--padding-cart-panel); transition:all .3s ease; z-index:102;}
-#close-cart-panel{color:#fff;border-bottom:1px solid #464646; border:0 solid transparent; background-color:transparent; font-size:16px; display:block; margin-left:auto; cursor:pointer;}
+#cart-panel,
+#wishlist-panel{background-color:#333; color:#fff; position:fixed; top:0; right:-100%; width:var(--width--cart-panel); height:100%; overflow:hidden; padding:var(--padding-cart-panel); transition:all .3s ease; z-index:102;}
+#close-panels{color:#fff;border-bottom:1px solid #464646; border:0 solid transparent; background-color:transparent; font-size:16px; display:block; margin-left:auto; cursor:pointer;}
