botón para el panel de carrito

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ img{display:block; height:auto;}
             #main-footer .social ul li a[href*="twitter"]:before{content:'\e916';}
             #main-footer .social ul li a[href*="instagram"]:before{content:'\f16f';}
 
-/* panel carrito */
+/* paneles carrito & wishlist */
 #cart-panel,
 #wishlist-panel{background-color:#333; color:#fff; position:fixed; top:0; right:-100%; width:var(--width--cart-panel); height:100%; overflow:hidden; padding:var(--padding-cart-panel); transition:all .3s ease; z-index:102;}
-#close-panels{color:#fff;border-bottom:1px solid #464646; border:0 solid transparent; background-color:transparent; font-size:16px; display:block; margin-left:auto; cursor:pointer;}
+.close-panels{color:#fff;border-bottom:1px solid #464646; border:0 solid transparent; background-color:transparent; font-size:16px; display:block; margin-left:auto; cursor:pointer;}
