--- a/style.css
+++ b/style.css
@@ -124,4 +124,7 @@ img{display:block; height:auto;}
 #cart-panel,
 #wishlist-panel{background-color:#333; color:#fff; position:fixed; top:0; right:-100%; width:var(--width--cart-panel); height:100%; overflow:hidden; padding:var(--padding-cart-panel); transition:all .3s ease; z-index:102;}
 .close-panels{color:#fff;border-bottom:1px solid #464646; border:0 solid transparent; background-color:transparent; font-size:16px; display:block; margin-left:auto; cursor:pointer;}
+/* wishlist */
 #whishlist-panel .yith-wcwl-form .wishlist-title-container{display:none;}
+/* miniatura */
+.wishlist_table tr td.product-thumbnail a img{width:64px; height:64px; object-fit:cover; border-radius:50%;}
