--- a/style.css
+++ b/style.css
@@ -135,5 +135,7 @@ img{display:block; height:auto;}
         /* celda */
         table.wishlist_table tbody td{padding:0 12px;}
         table.wishlist_table tbody td.product-remove{padding:0;}
+        table.wishlist_table tbody :is(td.product-remove, td.product-name, td.product-price, td.product-stock-status, td.product-add-to-cart){grid-column:2/3;}
             /* miniatura */
+            .wishlist_table tr td.product-thumbnail{grid-column:1/2;}
             .wishlist_table tr td.product-thumbnail a img{width:64px; height:64px; object-fit:cover; border-radius:50%;}
