--- a/style.css
+++ b/style.css
@@ -130,6 +130,8 @@ img{display:block; height:auto;}
     table.wishlist_table{width:100%;}
     /* cabecera de tabla */
     table.wishlist_table thead{display:none;}
+    /* cuespo de la tabla */
+    table.wishlist_table tbody *:not(:last-child){margin-bottom:22px;}
     /* fila */
     table.wishlist_table tr{display:grid;}
         /* celda */
