--- a/style.css
+++ b/style.css
@@ -135,9 +135,10 @@ img{display:block; height:auto;}
     /* fila */
     table.wishlist_table tr{display:grid;}
         /* celda */
-        table.wishlist_table tbody td{padding:0 12px;}
+        table.wishlist_table tbody td,
         table.wishlist_table tbody td.product-remove{padding:0;}
         table.wishlist_table tbody :is(td.product-remove, td.product-name, td.product-price, td.product-stock-status, td.product-add-to-cart){grid-column:2/3; color:#fff; text-align:left;}
+        table.wishlist_table tbody td a{margin:0;}
             /* miniatura */
             .wishlist_table tr td.product-thumbnail{grid-column:1/2; grid-row:1/5; display:grid; padding:0; align-items:center;}
             .wishlist_table tr td.product-thumbnail a img{width:64px; height:64px; object-fit:cover; border-radius:50%;}
