--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ img{display:block; height:auto;}
 /* wishlist */
 #wishlist-panel .yith-wcwl-form .wishlist-title-container{display:none;}
     /* tabla */
-    table.wishlist_table{width:100%;}
+    table.wishlist_table{width:100%; padding-top:40px;}
     /* cabecera de tabla */
     table.wishlist_table thead{display:none;}
     /* cuespo de la tabla */
