--- a/style.css
+++ b/style.css
@@ -135,8 +135,8 @@ img{display:block; height:auto;}
     
     /* fila */
     table.wishlist_table tr{display:grid;}
-    table.wishlist_table tbody > *:not(:last-child),
-    ul.wishlist_table.mobile li{margin-bottom:22px;}
+    table.wishlist_table tbody > *:not(:last-child){margin-bottom:22px;}
+    ul.wishlist_table.mobile li{margin-bottom:22px; padding-left:86px; position:relative;}
         /* celda */
         table.wishlist_table tbody td,
         table.wishlist_table tbody td.product-remove{padding:0;}
@@ -146,6 +146,7 @@ img{display:block; height:auto;}
             table.wishlist_table tbody td.product-remove{text-align:right;}
             /* miniatura */
             .wishlist_table tr td.product-thumbnail{grid-column:1/2; grid-row:1/6; display:grid; padding:0; align-items:center;}
+            ul.wishlist_table.mobile li .product-thumbnail a{position:absolute; top:left;}
             ul.wishlist_table.mobile li .product-thumbnail a img,
             .wishlist_table tr td.product-thumbnail a img{width:64px; height:64px; object-fit:cover; border-radius:50%;}
             /* agregar al carrito */
