--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ img{display:block; height:auto;}
             table.wishlist_table tbody td.product-remove{text-align:right;}
             /* miniatura */
             .wishlist_table tr td.product-thumbnail{grid-column:1/2; grid-row:1/6; display:grid; padding:0; align-items:center;}
-            ul.wishlist_table.mobile li .product-thumbnail a{position:absolute; top:left;}
+            ul.wishlist_table.mobile li .product-thumbnail a{position:absolute; top:0; left:0;}
             ul.wishlist_table.mobile li .product-thumbnail a img,
             .wishlist_table tr td.product-thumbnail a img{width:64px; height:64px; object-fit:cover; border-radius:50%;}
             /* agregar al carrito */
