--- a/style.css
+++ b/style.css
@@ -148,8 +148,8 @@ img{display:block; height:auto;}
             /* miniatura */
             .wishlist_table tr td.product-thumbnail{grid-column:1/2; grid-row:1/6; display:grid; padding:0; align-items:center;}
             ul.wishlist_table.mobile li .item-wrapper .item-details{width:100%;}
-            ul.wishlist_table.mobile li .item-wrapper .item-details .product-name{font-size:16px; color:#fff}
-            ul.wishlist_table.mobile li .item-wrapper .item-details .product-name h3{margin-bottom:0;}
+            ul.wishlist_table.mobile li .item-wrapper .item-details .product-name{font-size:16px;}
+            ul.wishlist_table.mobile li .item-wrapper .item-details .product-name h3{margin-bottom:0; color:#fff;}
             ul.wishlist_table.mobile li .item-wrapper .product-thumbnail{margin:0;}
             ul.wishlist_table.mobile li .product-thumbnail a{position:absolute; top:0; left:0;}
             ul.wishlist_table.mobile li .product-thumbnail a img,
