--- a/style.css
+++ b/style.css
@@ -152,8 +152,8 @@ img{display:block; height:auto;}
             ul.wishlist_table.mobile li .item-wrapper .item-details .product-name h3{margin-bottom:0; color:#fff;}
             ul.wishlist_table.mobile li .item-wrapper .item-details .item-details-table tbody tr td.label{display:none;}
             ul.wishlist_table.mobile li .item-wrapper .item-details .item-details-table tbody tr td.value{padding:0; font-size:16px; color:#fff;}
-            ul.wishlist_table.mobile li .item-wrapper .item-details .additional-info tbody tr td.label{display:none;}
-            ul.wishlist_table.mobile li .item-wrapper .item-details .additional-info tbody tr td.value{padding:0; font-size:16px; color:#fff;}
+            ul.wishlist_table.mobile li .item-wrapper .additional-info-wrapper .additional-info tbody tr td.label{display:none;}
+            ul.wishlist_table.mobile li .item-wrapper .additional-info-wrapper .additional-info tbody tr td.value{padding:0; font-size:16px; color:#fff;}
             ul.wishlist_table.mobile li .item-wrapper .product-thumbnail{margin:0;}
             ul.wishlist_table.mobile li .product-thumbnail a{position:absolute; top:0; left:0;}
             ul.wishlist_table.mobile li .product-thumbnail a img,
