--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ img{display:block; height:auto;}
             ul.wishlist_table.mobile li .item-wrapper{margin-bottom:0;}
             ul.wishlist_table.mobile li .item-wrapper .item-details{width:100%;}
             ul.wishlist_table.mobile li .item-wrapper .item-details .product-name{font-size:16px;}
-            ul.wishlist_table.mobile li .item-wrapper .item-details .product-name .item-details-table{margin:0;}
+            ul.wishlist_table.mobile li .item-wrapper .item-details table.item-details-table{margin:0;}
             ul.wishlist_table.mobile li .item-wrapper .item-details .product-name h3{margin-bottom:0; color:#fff;}
             ul.wishlist_table.mobile li .item-wrapper .item-details .item-details-table tbody tr td.label{display:none;}
             ul.wishlist_table.mobile li .item-wrapper .item-details .item-details-table tbody tr td.value{padding:0; font-size:16px; color:#fff;}
