--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ img{display:block; height:auto;}
             ul.wishlist_table.mobile li .additional-info-wrapper .additional-info{margin-bottom:0;}
             ul.wishlist_table.mobile li .additional-info-wrapper .additional-info tbody tr td.label{display:none;}
             ul.wishlist_table.mobile li .additional-info-wrapper .additional-info tbody tr td.value{padding:0; font-size:16px; color:#fff;}
+            ul.wishlist_table.mobile li .additional-info-wrapper .product-add-to-cart a{color:#fff;}
             ul.wishlist_table.mobile li .item-wrapper .product-thumbnail{margin:0;}
             ul.wishlist_table.mobile li .product-thumbnail a{position:absolute; top:0; left:0;}
             ul.wishlist_table.mobile li .product-thumbnail a img,
