css de la wishlist

--- a/style.css
+++ b/style.css
@@ -135,8 +135,8 @@ img{display:block; height:auto;}
     
     /* fila */
     table.wishlist_table tr{display:grid;}
-    table.wishlist_table tbody > *:not(:last-child){margin-bottom:22px;}
-    ul.wishlist_table.mobile li{margin-bottom:22px; padding-left:86px; padding-top:27px; position:relative;}
+    table.wishlist_table tbody > *:not(:last-child){margin-bottom:40px;}
+    ul.wishlist_table.mobile li{margin-bottom:40px; padding-left:86px; position:relative;}
     ul.wishlist_table.mobile li .item-wrapper{display:flex;}
         /* celda */
         table.wishlist_table tbody td,
@@ -162,7 +162,7 @@ img{display:block; height:auto;}
             ul.wishlist_table.mobile li .additional-info-wrapper .product-remove{position:absolute; top:0; right:0;}
             ul.wishlist_table.mobile li .additional-info-wrapper .product-remove a{color:#fff;}
             ul.wishlist_table.mobile li .item-wrapper .product-thumbnail{margin:0;}
-            ul.wishlist_table.mobile li .product-thumbnail a{position:absolute; top:27px; left:0;}
+            ul.wishlist_table.mobile li .product-thumbnail a{position:absolute; top:0; left:0;}
             ul.wishlist_table.mobile li .product-thumbnail a img,
             .wishlist_table tr td.product-thumbnail a img{width:64px; height:64px; object-fit:cover; border-radius:50%;}
             /* agregar al carrito */
