--- a/style.css
+++ b/style.css
@@ -135,8 +135,8 @@ img{display:block; height:auto;}
     
     /* fila */
     table.wishlist_table tr{display:grid;}
-    table.wishlist_table tbody > *:not(:last-child){margin-bottom:40px;}
-    ul.wishlist_table.mobile li{margin-bottom:40px; padding-left:86px; position:relative;}
+    table.wishlist_table tbody > *:not(:last-child){margin-bottom:50px;}
+    ul.wishlist_table.mobile li{margin-bottom:50px; padding-left:86px; position:relative;}
     ul.wishlist_table.mobile li .item-wrapper{display:flex;}
         /* celda */
         table.wishlist_table tbody td,
@@ -157,7 +157,7 @@ img{display:block; height:auto;}
             ul.wishlist_table.mobile li .item-wrapper .item-details .item-details-table tbody tr td.value{padding:0; font-size:16px; color:#fff;}
             ul.wishlist_table.mobile li .additional-info-wrapper .additional-info{margin-bottom:0;}
             ul.wishlist_table.mobile li .additional-info-wrapper .additional-info tbody tr td.label{display:none;}
-            ul.wishlist_table.mobile li .additional-info-wrapper .additional-info tbody tr td.value{padding:0; font-size:16px; color:#fff;}
+            ul.wishlist_table.mobile li .additional-info-wrapper .additional-info tbody tr td.value{padding:0; font-size:16px; color:#777;}
             ul.wishlist_table.mobile li .additional-info-wrapper .product-add-to-cart a{color:#fff;}
             ul.wishlist_table.mobile li .additional-info-wrapper .product-remove{position:absolute; top:0; right:0;}
             ul.wishlist_table.mobile li .additional-info-wrapper .product-remove a{color:#fff;}
