--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ img{display:block; height:auto;}
     /* cuerpo de la tabla */
     
     /* fila */
-    table.wishlist_table tr{display:grid;}
+    table.wishlist_table tr{display:grid; grid-template-columns:86px 1fr; position:relative;}
     table.wishlist_table tbody > *:not(:last-child){margin-bottom:50px;}
     ul.wishlist_table.mobile li{margin-bottom:50px; padding-left:86px; position:relative;}
     ul.wishlist_table.mobile li .item-wrapper{display:flex;}
@@ -144,9 +144,9 @@ img{display:block; height:auto;}
         table.wishlist_table tbody :is(td.product-remove, td.product-name, td.product-price, td.product-stock-status, td.product-add-to-cart){grid-column:2/3; text-align:left;}
         table.wishlist_table tbody td a{margin:0; color:#fff;}
             /* remover producto */
-            table.wishlist_table tbody td.product-remove{text-align:right;}
+            table.wishlist_table tbody td.product-remove{text-align:right; position:absolute; top:0; right:0;}
             /* miniatura */
-            .wishlist_table tr td.product-thumbnail{grid-column:1/2; grid-row:1/6; display:grid; padding:0; align-items:center;}
+            .wishlist_table tr td.product-thumbnail{grid-column:1/2; grid-row:1/6; display:grid; padding:0; align-items:start;}
             ul.wishlist_table.mobile li .item-wrapper{margin-bottom:0;}
             ul.wishlist_table.mobile li .item-wrapper .item-details{width:100%;}
             ul.wishlist_table.mobile li .item-wrapper .item-details .product-name{font-size:16px;}
