--- a/assets/css/woocommerce/lists.css
+++ b/assets/css/woocommerce/lists.css
@@ -1,15 +1,15 @@
-.products{padding-left:0; list-style:none; display:grid; gap:38px 24px; grid-template-columns:var(--grid-columns--loop--woo); padding-bottom:37px;}
-.products li > *:not(:last-child){margin-bottom:15px;}
-.products li a{display:block;}
-.products li a img{width:100%;}
-.products li .content{position:relative; padding-right:30px;}
-.products li .content *{margin:0; line-height:1.6;}
-.products li .content .title-wrapper .woocommerce-loop-product__title{color:var(--wp--preset--color--text); font-size:16px; transition:all .3s ease;}
-.products li .content .title-wrapper .woocommerce-loop-product__title:hover{color:var(--wp--preset--color--title);}
-.products li .content .price{color:var(--wp--preset--color--title); font-size:14px;}
-.products li .content .show{opacity:0; background-color:#fff; position:absolute; font-size:0; bottom:0; left:0; border-radius:0; border-bottom:1px solid #cfcfcf; color:var(--wp--preset--color--title); transition:all .3s ease;}
-.products li .content .show.permalink{opacity:1; font-size:14px;}
-.products li .content .show.permalink:hover{color:var(--wp--preset--color--links);}
-.products li .content :is(.yith-wcwl-add-button, .yith-wcwl-add-to-wishlist){position:absolute; top:0; right:0; transition:all .3s ease;}
-.products li .content :is(.yith-wcwl-add-button, .yith-wcwl-add-to-wishlist) i{ color:var(--wp--preset--color--text); transition:all .3s ease;}
-.products li .content :is(.yith-wcwl-add-button, .yith-wcwl-add-to-wishlist) i:hover{color:var(--wp--preset--color--title);}
+ul.products{padding-left:0; list-style:none; display:grid; gap:38px 24px; grid-template-columns:var(--grid-columns--loop--woo); padding-bottom:37px;}
+ul.products li > *:not(:last-child){margin-bottom:15px;}
+ul.products li a{display:block;}
+ul.products li a img{width:100%;}
+ul.products li .content{position:relative; padding-right:30px;}
+ul.products li .content *{margin:0; line-height:1.6;}
+ul.products li .content .title-wrapper .woocommerce-loop-product__title{color:var(--wp--preset--color--text); font-size:16px; transition:all .3s ease;}
+ul.products li .content .title-wrapper .woocommerce-loop-product__title:hover{color:var(--wp--preset--color--title);}
+ul.products li .content .price{color:var(--wp--preset--color--title); font-size:14px;}
+ul.products li .content .show{opacity:0; background-color:#fff; position:absolute; font-size:0; bottom:0; left:0; border-radius:0; border-bottom:1px solid #cfcfcf; color:var(--wp--preset--color--title); transition:all .3s ease;}
+ul.products li .content .show.permalink{opacity:1; font-size:14px;}
+ul.products li .content .show.permalink:hover{color:var(--wp--preset--color--links);}
+ul.products li .content :is(.yith-wcwl-add-button, .yith-wcwl-add-to-wishlist){position:absolute; top:0; right:0; transition:all .3s ease;}
+ul.products li .content :is(.yith-wcwl-add-button, .yith-wcwl-add-to-wishlist) i{ color:var(--wp--preset--color--text); transition:all .3s ease;}
+ul.products li .content :is(.yith-wcwl-add-button, .yith-wcwl-add-to-wishlist) i:hover{color:var(--wp--preset--color--title);}
