css del mini wishlist

--- a/style.css
+++ b/style.css
@@ -134,8 +134,8 @@ img{display:block; height:auto;}
     /* cuerpo de la tabla */
     
     /* fila */
-    #wishlist-panel table.wishlist_table tr{display:grid; grid-template-columns:86px 1fr; position:relative;}
-    #wishlist-panel table.wishlist_table tbody > *:not(:last-child){margin-bottom:50px;}
+    #wishlist-panel table.wishlist_table tr{display:grid; grid-template-columns:86px 1fr; position:relative; padding:14px 0 14px;}
+    #wishlist-panel table.wishlist_table tbody > *:not(:last-child){border-bottom:1px solid #464646;}
     #wishlist-panel ul.wishlist_table.mobile li{padding:14px 20px 14px 86px; margin-bottom:0; position:relative;}
     #wishlist-panel ul.wishlist_table.mobile li:not(:last-child){border-bottom:1px solid #464646;}
     #wishlist-panel ul.wishlist_table.mobile li .item-wrapper{display:flex;}
